# aihelpdesk

./: .env.example  .gitignore  INTERVIEW_QA.md  PROJECT_DOCUMENTATION.md  pyproject.toml
backend/: check_db.py  reindex.py  seed.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/agents/: __init__.py  audit_agent.py  base.py  duplicate_agent.py  embedding_agent.py  intent_agent.py  ocr_agent.py  orchestrator.py  priority_agent.py  rag_agent.py  routing_agent.py  vision_agent.py
backend/app/api/: admin.py  analytics.py  auth.py  deps.py  knowledge.py  notifications.py  tickets.py
backend/app/core/: config.py  database.py  embeddings.py  llm.py  security.py  tls.py  vectorstore.py
backend/app/models/: __init__.py  feedback.py  log.py  notification.py  role.py  ticket.py  user.py
backend/app/repositories/: __init__.py  article_repo.py  feedback_repo.py  log_repo.py  notification_repo.py  ticket_repo.py  user_repo.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  kb_service.py  notification_service.py  ticket_service.py
frontend/: .env.example  .gitignore  README.md  index.html  jest.config.cjs  package-lock.json  package.json
frontend/src/: App.jsx  config.js  main.jsx  setupTests.js  theme.js
frontend/src/__mocks__/: styleMock.js
frontend/src/__tests__/: StatusChip.test.jsx  TicketForm.test.jsx  TicketList.test.jsx
frontend/src/api/: admin.js  analytics.js  auth.js  client.js  knowledge.js  notifications.js  session.js  tickets.js
frontend/src/components/: ArticleList.jsx  ArticleView.jsx  Dashboard.jsx  (+10 more)
(+12 files in other folders)
